<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UploadActivity"
    android:background="@drawable/rostyslav_savchyn_unsplash">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="60sp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/select_picture" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="368dp"
        android:layout_height="395dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
        android:id="@+id/constraintLayout"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout_main_menu">

        <ImageView
            android:id="@+id/imgview_display"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/your_puzzle"
            android:scaleType="centerInside"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:color/transparent" />

        <TextView
            android:id="@+id/lbl_preview"
            android:layout_width="233dp"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/lbl_preview"
            android:text="@string/placeholder_upload_image"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/imgview_display"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498" />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="365dp"
        android:layout_height="89dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/constraintLayout_main_menu"
        app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="16dp">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp" android:id="@+id/btn_upload"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:src="@drawable/icon_upload" android:contentDescription="@string/btn_upload"
            android:visibility="visible"
            android:tint="@color/colorPrimary"
            android:scaleType="centerCrop" style="?attr/actionButtonStyle"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_create_puzzle"/>

        <ImageButton
            android:id="@+id/btn_create_puzzle"
            style="?attr/actionButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/btn_create_puzzle"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_icon_puzzle_2"
            android:tint="@color/colorPrimary"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_upload"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:text="@string/lbl_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:contentDescription="@string/lbl_preview" android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_upload" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toEndOf="@+id/btn_upload"
            app:layout_constraintStart_toStartOf="@+id/btn_upload"
            android:textColor="@android:color/darker_gray"/>
        <TextView
            android:text="@string/btn_create_puzzle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:contentDescription="@string/lbl_preview" android:visibility="visible"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_create_puzzle"
            app:layout_constraintStart_toStartOf="@+id/btn_create_puzzle"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/btn_create_puzzle"
            app:layout_constraintVertical_bias="0.0" tools:text="Create"
            android:textColor="@android:color/darker_gray"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>